Enhancement: 전반적인 예외 처리